test/compile_errors/err_reserved_move.w
//! expect-check-fail: 'move' must be followed by a closure
fn main:
    move
